@@ -1,3 +1,7 @@
+2011-08-26 Borut Razem <borut.razem AT gmail.com>
+
+	* sdcc-build-bootstrap.sh: don't use "make -C"
+
 2011-08-24 Borut Razem <borut.razem AT gmail.com>
 
 	* components/sdcc.mk: added MAKESILENTFLAG when making sdcc-regression
